--- a/package.json
+++ b/package.json
@@ -14,22 +14,24 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.3",
+		"@eslint/js": "^9.17.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"eslint": "^9.7.0",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
+		"globals": "^15.14.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0",
+		"typescript-eslint": "^8.19.1",
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
-		"@supabase/supabase-js": "^2.47.10"
+		"@supabase/supabase-js": "^2.47.10",
+		"dotenv": "^16.4.7"
 	}
 }
