--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.47.10",
+		"@sveltejs/adapter-cloudflare": "^5.0.0",
 		"dotenv": "^16.4.7"
 	}
 }
