--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"@supabase/supabase-js": "^2.47.10",
 		"@sveltejs/adapter-cloudflare": "^5.0.0",
 		"dotenv": "^16.4.7"
+	},
+	"engines": {
+		"node": ">=18.18.0"
 	}
 }
