--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.19.1",
 		"vite": "^5.4.11"
